# anon-cli

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
apps/cli/: main.py
examples/sample_repo/roles/web/tasks/: credentials.yml  main.yml
intellisa/: __init__.py
intellisa/models/: __init__.py  fetch.py
models/: registry.yaml
models/IntelliSA-220m/: MODEL_CARD.md  config.json  frozen_thresholds.yaml  selection.json  sha256.txt
models/stub/: stub.safetensors
scripts/: run_action_scan.py
tests/e2e/: test_sample_scan.py
tests/e2e/golden/: sample.jsonl  sample.sarif
tests/unit/: test_cli_scan.py  test_exporters.py  test_glitch_adapter.py  test_model_fetch.py  test_postfilter_engine.py  test_schema_models.py
